--- a/styles.css
+++ b/styles.css
@@ -178,14 +178,17 @@ h6 {
 
 .mobile-menu.active {
   display: flex;
+  align-items: flex-end;
+  background: #00000030;
 }
 
 .mobile-link {
   background: none;
+  margin-right: 1rem;
   border: none;
-  color: var(--foreground);
+  color: hsl(0deg 0% 0%);
   opacity: 0.8;
-  font-weight: 500;
+  font-weight: 700;
   cursor: pointer;
   text-align: left;
   padding: 0.5rem 0;
@@ -239,6 +242,7 @@ h6 {
   border: 1px solid hsla(24, 85%, 55%, 0.2);
   border-radius: 9999px;
   padding: 0.5rem 1rem;
+  margin-top: 8%;
   margin-bottom: 1.5rem;
 }
 
@@ -1108,6 +1112,12 @@ h6 {
   .container {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .hero-badge {
+    margin-top: 0;
   }
 }
 
