--- a/styles.css
+++ b/styles.css
@@ -689,12 +689,12 @@ h6 {
 
 .panel-close {
   position: absolute;
-  top: 2%;
+  top: 0.3rem;
   right: 1rem;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgb(0 0 0 / 16%);
   border: none;
-  border-radius: 0.5rem;
-  padding: 0.5rem;
+  border-radius: 2.5rem;
+  padding: 0.2rem;
   cursor: pointer;
   z-index: 10;
   transition: background-color 0.3s ease;
